<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ashwinpilgaonkar.audiocontrol.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/Status_TextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/view"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status"
        android:id="@+id/Static_Status"
        android:textStyle="bold"
        android:textColor="#111111"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current"
        android:gravity="center"
        android:textSize="42sp"
        android:textAllCaps="true"
        android:textColor="#595959"
        android:id="@+id/Status_TextView"
        android:layout_below="@+id/Static_Status"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/route_audio_via"
        android:id="@+id/Static_Route"
        android:layout_below="@+id/Enable_Switch"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earpiece"
        android:id="@+id/Earpiece_Radio"
        android:checked="false"
        android:layout_below="@+id/Static_Route"
        android:layout_alignParentStart="true"
        android:onClick="onRadioButtonClicked"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speaker"
        android:id="@+id/Speaker_Radio"
        android:checked="false"
        android:layout_below="@+id/Earpiece_Radio"
        android:layout_alignParentStart="true"
        android:onClick="onRadioButtonClicked"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headphones"
        android:id="@+id/Headphones_Radio"
        android:checked="false"
        android:layout_below="@+id/Speaker_Radio"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:onClick="onRadioButtonClicked"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        android:id="@+id/Enable_Switch"
        android:checked="false"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="35dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:id="@+id/button"
        android:layout_below="@+id/Headphones_Radio"
        android:layout_alignEnd="@+id/Headphones_Radio"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_proximity_sensor"
        android:id="@+id/Proximity_Checkbox"
        android:checked="false"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

</RelativeLayout>
